RenderText: Allow strike-through line thickness to be customized.

This CL plumbs in the ability to override the default strike-through
line thickness used by RenderText. Along the way:

- Remove unused underscore thickness configuration hooks.
- Remove unncessary DrawDecorations wrapper.

BUG=735759

Review-Url: https://codereview.chromium.org/2969623004
Cr-Commit-Position: refs/heads/master@{#484580}

Former-commit-id: 6c111c024ce31e4de508032dc8b7a18564007ed5