chrome/browser/android/vr_shell/textures/render_text_wrapper.h
@@ -25,6 +25,8 @@ class RenderTextWrapper {
                           bool value,
                           const gfx::Range& range);
 
+  virtual void SetStrikeThicknessFactor(SkScalar factor);
+
  private:
   gfx::RenderText* render_text_ = nullptr;
 
